--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,29 @@
   themes: light --default, dark --prefersdark;
   themes: light --default;
  };
+
+ .roboto {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+}
+
+.stack-sans {
+  font-family: "Stack Sans Notch", sans-serif;
+  font-optical-sizing: auto;
+}
+
+.montserrat {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+}
+
+ .common_p {
+  text-align: center;
+  font-weight: 600;
+  font-size: 24px;
+  font-family: "Roboto", sans-serif;
+ }
+
+ .com_text{
+  font-family: "Montserrat", sans-serif;
+ }
