--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   name: "light";
   default: true;
   --color-primary: #6EE7B7;
-  --color-secondary: #28C7DB;
+  --color-secondary: #e1edfc;
   --color-text: #FFFFFF;
 }
 
@@ -28,19 +28,4 @@
 .montserrat {
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
-}
-
-.common_p {
-  text-align: center;
-  font-weight: 600;
-  font-size: 24px;
-  font-family: "Roboto", sans-serif;
-}
-
-.com_text {
-  font-family: "Montserrat", sans-serif;
-}
-
-.com_btn {
-  background-color: linear-gradient(to right, #6a11cb, #2575fc);
 }
